# project-init

./: .gitignore  README.md  agents.md  pyproject.toml
modules/base/: agents.md.tmpl  install.py  ref-base.md
modules/base/hooks/: pre-commit
modules/cas/: install.py  ref-cas.md
modules/exptracking/: install.py  ref-exptracking.md
modules/python/: install.py  pyproject.toml.tmpl  ref-python.md
modules/security/: install.py  ref-security.md
profiles/: ml-research.flags
project_init/: cli.py  runner.py  utils.py
tests/: conftest.py  test_base.py  test_cli.py  test_idempotency.py  test_python.py
