[project]
name = "project-init"
version = "0.1.0"
requires-python = ">=3.11,<4.0"
dependencies = []

[project.scripts]
project-init = "project_init.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.4.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]